# ChangeLog for media-sound/traverso
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/traverso/ChangeLog,v 1.34 2013/03/02 22:04:48 hwoarang Exp $

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> traverso-0.49.2-r1.ebuild:
  Move Qt dependencies to the new category

  27 Jun 2012; Samuli Suominen <ssuominen@gentoo.org>
  traverso-0.49.2-r1.ebuild:
  Fix building with USE="lv2" by querying Cflags: from slv2.pc pkg-config file
  for raptor2.h include path wrt #415165

  27 Jun 2012; Samuli Suominen <ssuominen@gentoo.org>
  traverso-0.49.2-r1.ebuild, +files/traverso-0.49.2-gcc47.patch:
  Install hicolor icons and update icon cache. Fix building with sys-devel/gcc
  >= 4.7.0.

  08 May 2012; Alexis Ballier <aballier@gentoo.org> metadata.xml:
  drop maintainership

  07 May 2012; Ben de Groot <yngwin@gentoo.org>
  -files/traverso-0.49.1-cmake.patch:
  Remove obsoleted patch

*traverso-0.49.2-r1 (07 May 2012)

  07 May 2012; Ben de Groot <yngwin@gentoo.org>
  +files/traverso-0.49.2-desktop.patch, +files/traverso-0.49.2-gold.patch,
  +traverso-0.49.2-r1.ebuild, -traverso-0.49.1.ebuild, -traverso-0.49.2.ebuild:
  Drop unnecessary qt4.eclass usage, fixes bug 410107. Add gold linking patch
  and .desktop file patch (from kensington in the same bug). Remove old.

  05 May 2012; Michał Górny <mgorny@gentoo.org> traverso-0.49.1.ebuild,
  traverso-0.49.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*traverso-0.49.2 (15 Aug 2010)

  15 Aug 2010; Alexis Ballier <aballier@gentoo.org> +traverso-0.49.2.ebuild:
  version bump

  20 Jun 2009; Alexis Ballier <aballier@gentoo.org> -traverso-0.42.0.ebuild,
  -files/traverso-0.42.0-cmake.patch, -files/traverso-0.42.0-gcc43.patch,
  -files/traverso-0.42.0-nojack.patch,
  -files/traverso-0.42.0-strictaliasing.patch:
  remove old

  20 Jun 2009; Alexis Ballier <aballier@gentoo.org> -traverso-9999.ebuild: