@@ -5,26 +5,16 @@ AUX traverso-0.49.1-slv2.patch 673 SHA256 90bf9fc1ead1e9c158ba21cb3efc27dc62b565
 AUX traverso-0.49.2-desktop.patch 393 SHA256 33ced010f7e415e6c22ec8597ed915e0c12a05dbadd3f7527d3d19039a62cbb3 SHA512 d89ca0bbada57acb8fb8e1d9ad46ca44edc1add5d5be7e2c616431ec813476f92d371df597b3ce92fcc7a4e850d82e49f7a938308d3149c34410979ea6938364 WHIRLPOOL 91de82d56201f7247dd4329ce672ca32dfa373afd29b52b417735510e75d0bf1bc1ca2d6d7b9eb29076e6531a3fa9b0ed0ffb3dc7fa722a7e4d7b00ea4e54ecd
 AUX traverso-0.49.2-gcc47.patch 366 SHA256 b3b0464ee750ee5ecd7ef5c53a02cd1bca59dde34750e205fcc70d13dd72bc23 SHA512 ef929d783370762e84ba3ed6d065323f60e3807f6f39cf932c6dfdb857e7867ce0bb70b2564007cfcfa8838927316cd1dd77ae5af328e7f39b318670098f1df4 WHIRLPOOL 22a5df82763761a8378537f1ecb6c4ef79451de40b0228ef3e23aaf934e16751354c1dde927250a5e559e83a3c8f61174abd7e6cd335d6c4bca4fa5be9a0b800
 AUX traverso-0.49.2-gold.patch 227 SHA256 b1bd5ab4cdf26bdfd5854fd33e1397725a7c2bea61a9019b735554acdf7ac5bf SHA512 9a3015aa308033f69d0ca40175838bc78a200a6a3ae91866b7d874007e3fceeadbe176b06f2ffa113a50dcc1a679500f436c139de97fb1611e3b8578f474c360 WHIRLPOOL d7cf646f1207f3bfcfc9c771dd1ef75caedf61beb884bd65fbb360d98671e46a6934f2cbfb71247433634a2c887ad466350eee0cc89a429bccd9514e75f08c4f
-DIST traverso-0.49.2.tar.gz 1437811 SHA256 9edbbb10c4245ee58a7a125c33d86327a877d42bf84c8a1b81587642bd601002
+DIST traverso-0.49.2.tar.gz 1437811 SHA256 9edbbb10c4245ee58a7a125c33d86327a877d42bf84c8a1b81587642bd601002 SHA512 eebdb1849846b42b4407b78fcd287b92c328156740a8f664b0ef462b071599b628a7f25d26d66b8fe256c732f6c16b1ccae5229b9025dd2758df4a71cafaf0dc WHIRLPOOL 3bb67064a4bb2ead749507ac0628b5338b159c669536206cc4efce91ae6fc3f604de1317eb3b78fd31299a0be30c53b193a889140313fc0dbf220336ba82142d
+DIST traverso-0.49.3.tar.gz 1391101 SHA256 9e94b9b082c6891d5eaa5a8addb80b88f18bb7864899028eddf91a114a4b7382 SHA512 3db1dbc99ef3b0a9597959a6a3ce93909ec32d5f00648659debe1e8c5cec58ac6ab2108d5c66a1fc4145c2fe110c7db801fda8914664127653457132eac94ef2 WHIRLPOOL 3a44a45d9415071f80b8a788f28fcb38f489449d09dd5a93878f23af95eba1c1e8831db5ca6970ea97df91685051764d9ff21eeafeb3822cf29e478adb7c5a9f
 EBUILD traverso-0.49.2-r1.ebuild 2184 SHA256 fa6e8d2baa866a811fc48b2cb474f703ffa9896f291cfd30ea87350064814219 SHA512 f2902d8cde2c7780a6124b8bfbf32a0441b8d74203cc5857661872c3e94b470a1c11c2f4ae01507e279155ff8d91836920a053ba91b53011125ff55bcc063155 WHIRLPOOL a823507a222a883ce6283b2be6f7d31f28d47b2f66973ee7e11c48fe33affc16822f606326db04c9217c1955e983ea3b150eb8a0fa2d8c5e6d84ba14ad261a19
-MISC ChangeLog 5674 SHA256 9c80eef2362ac25cafc3a007387d7c0b39558eb44363541fe117f7df999637fc SHA512 f22bd20fbdae097f9ae60d80a9275d0afde1deaaf505f287abf41f9655befb92983ee183077939b5e09a163e88288e197c43073bccb867681c6d30611d29c343 WHIRLPOOL 357a8b0bd8482d7f0e818114115ec0ad45287d0902e5d48887d725f64cd57f24efd819a192db58848a777871cf01e4eefd0daa0af5ec1bc3ba73591c63addee8
+EBUILD traverso-0.49.3.ebuild 2027 SHA256 89d38b4a774b40c82c51d9e0f00298db24043a699552b13e0b29901375b676f6 SHA512 7a42586f4554d66ae34cca899f90046ca7e67280357102903345563a7c92c3db17cc3eae2e44410ad615979785cc90887258d4edd65f06cd4220b877a4fd64d1 WHIRLPOOL 78fdceb6b0f8217b4dddc4decb71185c88b066d1fd4521205e1b0db0e732154c3841a80b9c3bc27777b55b6b3be005dff57a337a6c8611a1fdd2b3ec55fb3699
+MISC ChangeLog 5799 SHA256 29bf9d6c5f9d8ee9661d0ef7bcf2a2288ee9ab587e18fba2da5d043ed62298b0 SHA512 d1f318c20ee5163e7ebb4bfb24c69f83196211be4f156e1b22189dc24cbb05df419d2678038be76b879aa1ac2b45043034b7bd61b71a2757dbc6769a694421a4 WHIRLPOOL c4e290b1e8fd77f68dbdaef80328626e867f2f4f652a414d4ac837dfe827ab140caaae8d18f27e280c770b392c1115b1b2fb728ea584e162a527f3dba321a88c
 MISC metadata.xml 458 SHA256 8897942d2d9f80baa2985397df88c5bc277631873d6acc13582c4320e35712ef SHA512 96c1493c58efa511e45a8363dea7d676db0a4be00ae60c714610ad33ba27fd27268ee19dd0afe82f9f2718f396f081d4df71aa5511f2ec9efbd29a5352a83578 WHIRLPOOL 77db5df86237cb29e32216812925281b36cc634ba8daa6cefff9f005ec144186de476099c61dd5b64d91739bbc09f4df9e3a702a47f5e42abf581825a01ddebc
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJRMnd+XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun888FEP/00Yo+vrC1zJwD+cqg3+fKoB
-0mrznf0oZCt+Cffc7FHmDh2p6jJXypblZNLvR02w7vrWiS2jd1+xKKaYK01PA7R5
-TVjGcHtxSQ7QYdXoQnxsplg0QstwWiRkB1yy50zdp+b+BPum4G66758Pibi15XHv
-zvXISGrpOdP+vL01eXQeoAt2aLHg5wSb8TG1VUXWMAxpdXmDYSaUD9NwLc/dUQsr
-MapiIXdVlPEKv/IBEH6GH6uLvlZoqU7zHUII2hChnZ5//Qro7xFR582A/zqYVaJi
-h6xYRqWb93TNv3I+/6gt785CK7bozAG6c+jjI6WZD0uliWzLV1KHMAgktZENIYve
-fUg8xi51+MkEgRQCNuQFgdUE9wWr5VWq8v0SVknFbRGoO7gyYXXfdt4dwZpkKWCh
-nDHL6UNO26U8FJiMSqhdFtjhtbWa0XmtTkXyd0Z/MGHAWUfI3Q5TW1hLFgMJulVg
-QdQ2Zp8CObcyIl4FoTOMyNwNND4OZbYd1Qdc3Q+MfUR7vP+dDR4JJSVnOAiQCJ6V
-C2Qz1F5DeWjBpAv0sNKGYqZ2iLKoLZIAgIjr2iBfekYZ5XvzxIoTEOds/TT+nfTW
-9BKHifboYieQPojdhGXBLJMlyln5biSmPj0uXWOFDhQH7rAY78TEJYL+VbvE7FFK
-LkIEsOY8GEZDQin7BSrN
-=5sar
+iEYEAREIAAYFAlUIAmQACgkQvFcC4BYPU0qRCgCfWd3DyGYpwwKNlzd4zsUi8Q/H
+M7IAn24MF1v4sfCyc8ut8RvQzHL78d7z
+=Fxhx
 -----END PGP SIGNATURE-----
