@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare test
+DEPEND=>=media-libs/flac-1.1.2 >=media-libs/libogg-1.1.2 media-libs/libsamplerate >=media-libs/libsndfile-1.0.12 >=media-libs/libvorbis-1.1.2 >=media-sound/wavpack-4.40.0 >=sci-libs/fftw-3 dev-qt/qtcore:4 dev-qt/qtgui:4 alsa? ( >=media-libs/alsa-lib-1.0.0 ) jack? ( >=media-sound/jack-audio-connection-kit-0.100 ) lame? ( media-sound/lame ) lv2? ( media-libs/lilv ) mad? ( >=media-libs/libmad-0.15.0 ) pulseaudio? ( >=media-sound/pulseaudio-0.9 ) virtual/pkgconfig sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) >=sys-apps/sed-4
+DESCRIPTION=Professional Audio Tools for GNU/Linux
+EAPI=4
+HOMEPAGE=http://traverso-daw.org/
+IUSE=alsa debug jack lame lv2 mad pulseaudio
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=>=media-libs/flac-1.1.2 >=media-libs/libogg-1.1.2 media-libs/libsamplerate >=media-libs/libsndfile-1.0.12 >=media-libs/libvorbis-1.1.2 >=media-sound/wavpack-4.40.0 >=sci-libs/fftw-3 dev-qt/qtcore:4 dev-qt/qtgui:4 alsa? ( >=media-libs/alsa-lib-1.0.0 ) jack? ( >=media-sound/jack-audio-connection-kit-0.100 ) lame? ( media-sound/lame ) lv2? ( media-libs/lilv ) mad? ( >=media-libs/libmad-0.15.0 ) pulseaudio? ( >=media-sound/pulseaudio-0.9 )
+SLOT=0
+SRC_URI=http://traverso-daw.org/traverso-0.49.3.tar.gz
+_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
+_md5_=d4cfb7b92d4c3e42a981ac312a76b533
