@@ -1,13 +1,0 @@
-DEFINED_PHASES=configure install prepare
-DEPEND=virtual/pkgconfig !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
-DESCRIPTION=VDPAU Backend for Video Acceleration (VA) API
-EAPI=2
-HOMEPAGE=http://www.freedesktop.org/wiki/Software/vaapi
-IUSE=debug opengl
-KEYWORDS=amd64 x86
-LICENSE=GPL-2
-RDEPEND=x11-libs/libva[opengl?] opengl? ( virtual/opengl ) <x11-libs/libvdpau-0.8 !x11-libs/vdpau-video
-SLOT=0
-SRC_URI=http://www.splitted-desktop.com/~gbeauchesne/vdpau-video/vdpau-video-0.7.3.tar.gz
-_eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=dc1a822fda1574d797f6f02039eaf60f
