@@ -5,28 +5,14 @@ AUX libva-vdpau-driver-0.7.4-VAEncH264VUIBufferType.patch 892 SHA256 1ae32b8e5cc
 AUX libva-vdpau-driver-0.7.4-glext-missing-definition.patch 659 SHA256 031f1a6b43c20fc3ac2f9da841eff02f6950569cb34f0b4be9fc93642d2dd927 SHA512 bb86ef063eb695c77bbe0fd0c273f1c2a479d1803b8381ffaeac5917de8a7d6e11cef33569d75fbbc1d16e9b64913e8f4a60fbb1b80afc5e381033bf34a192de WHIRLPOOL 2a28f72863c6fa0b36f99d398dead39051d895dfdbf3929809d3f5185a121569da96148c2c49a7ccd17cd3ded058f71de0be18fd9ade6844d0989c0d02be6ca5
 AUX libva-vdpau-driver-0.7.4-libvdpau-0.8.patch 442 SHA256 74b9ccd36e7fb90655e0855cf62111fd555390d1a396983af5687b9e8af64cd8 SHA512 969fb8011408acb2bc78a52672cb5a227ae876a2beb5cf209ae558031d71cf255849d5aeb301479f420de97a69b0055990d4ecdd3e0c684f678845b08e6b6632 WHIRLPOOL 22ee9c6a5dbc9f62f28d6602ceaf9729753d45eb1b097005df1ab9cf4d4c06ea497dde8a6abeead13707a2c0412dc510a927bc44240771ff08adc82de74f96c1
 DIST libva-vdpau-driver-0.7.4.tar.bz2 316729 SHA256 155c1982f0ac3f5435ba20b221bcaa11be212c37db548cd1f2a030ffa17e9bb9 SHA512 89f98dc1d7d590fb68f440dd1e37e025d64a621324e013e85dd1367681c07b09132fd2089539fc5b48934624648887a8a97539b4f07ddf9f56a8a456ad030094 WHIRLPOOL b6ba281a482dc944acff67d83d26d5a5ac7f15ea1de05c921383bdf0f6dae769d0389e6d15b607e01a8d4e18d3254f66391bbd497aa4e0eed2adbab54a13bce1
-DIST vdpau-video-0.7.3.tar.gz 400121 SHA256 28f66adc7d87a513a765dd79fda469e895b76692173d2aa79a26f4a618f91266 SHA512 ddaf232dcdd207939e659c88eac4f38a212566e95d6a08afbc22d274585c7a0972c8462c9273b26459628f95ade26081a171f9140cf857386d341e1dda98d63c WHIRLPOOL cddeb9c7de9176b82f11bee96be78fa6be613d1e097f4070e686f6d08a448567a7092f36673aa1c55fd5d3c7493390714c9b1031bf1820a64cb46fb60537685c
-EBUILD libva-vdpau-driver-0.7.3.ebuild 1058 SHA256 8a0532a87f66852e923c51a98b63cd05fdeb8b65c8dbe1c02e0b5b914b489001 SHA512 fc45733cfb716b830c5620fbfd54a3e9f223b0eff3f9f3aabd8663c004fd840134f85f1cf238c4d108cb2a6773fa01c9e6e18f0b641854ea7efff4962c48e763 WHIRLPOOL 070f3014cdf4f9041bf1ca0c5360878f76f0741cf2faaf866747ef3d6409a6403dcd189e1fcd94ca75f5ff9ea61e65eb4d8d14400acfdd471c642d0acc1ba1ef
-EBUILD libva-vdpau-driver-0.7.4-r1.ebuild 1225 SHA256 2c0a2a6735206d5beba262954c495c7a1b7056bbce61c610e5250cf77d9076f8 SHA512 ecee5b7d505815c2b5b90294c0277d04212634ce7f3dc3fd7e04c74c4de27cb74b2cde29194b0d0521d054d536698f2e8bdbf7cabb8ee1d1ded619713632c8a7 WHIRLPOOL 6d0ea313931fd036442c22abe8e42cb90fe478e7d827ebb7b2d03355b6320b36b58e20859f208d76c61b964ae5792fc19fd8e68260f993a83ecc29312efa6fb7
 EBUILD libva-vdpau-driver-0.7.4-r2.ebuild 1260 SHA256 ece28ee3c6998e073920fc77d7a86ea15d47d3c238ef663766500c4115154df8 SHA512 0c4e7e9b26a5b47445c32e77a7cbcb475c74ba2cd1e9e00d66efa16dc26df6ae10de07d0f6773989773b2ca91fa62f370ce6501e421034c2a7bea78c36fdefb7 WHIRLPOOL 0d340cf89c87e92150440549cdde5d83863e364b48859e906094a6290e657d70d2c3ec98de3077ebba13c277eace78e0cf178166d4b273aafc7c791108419686
-EBUILD libva-vdpau-driver-0.7.4.ebuild 1125 SHA256 9501288d1364b8f698d49a326822690cc88a005ff8778dfd40243317e057e27c SHA512 1b0b3fecfc7f27b338cb15c90f99919a598c68dc7fa9c326d06de5aa8e6e56e1f1fcce6e70a6f565f82e3abbb3a73701bb9d30d99d17271efe6db98d8b41a948 WHIRLPOOL 1b4d1bc0f8b74045d70b4990507b9c65c1f473b9e2592359f0ba358ae2db092427b8065472446578deed3128fa3d437afbb4788716885b60d172ee0ed10b5ddf
 EBUILD libva-vdpau-driver-9999.ebuild 1299 SHA256 9ab0f0adb4f08743ef52f0bfe7b837c1f386b6fda0e857126a2a9df3b81ee5ea SHA512 f3d14be3db94e12244b2689aedd0d09e0e9b85ddc85e6984811cd91122844b35bd5b2ac6e9055e1469d9b2be734f006d2c5563e4b1308f3f9b0bc8532a413cfb WHIRLPOOL 9958e5f6eb11ae9ea923c46f1c2d0bae5328e7161fff1d449120961fba1b2c94e51f070777e33973353c380294fceed33d2c30388593eec82e146deb5d3b8699
-MISC ChangeLog 5183 SHA256 e21ed3d763a9330a33a96959af5ca8b9db1667ef086123c1a2d9218af29710dc SHA512 675cdbd1103c93d03d3cd7629146cf0bb68b7a368b587453dbed79227250a4f011054c25d9cfc467e60b4efe161d663baddd2d84213114cf814c5675371fa766 WHIRLPOOL af91e0d29f2d6bed2e434e3102ed3d7883d4f88a3a597618d29950bd19a28013b4dbb0f783f285de73c27bbbcf3f8a3bde10802e03fb9bb0ca52c3a5b282d9e6
+MISC ChangeLog 5363 SHA256 bdf319ad5ee7b60a59c7eadce6974684e80e15b7d7d2f330f93d47cd345e217c SHA512 0f5ae68832f87a9ec96327c46ee2a0633437d58008970ac2a181f0ac29d6dfa70ecbe43dfcd1bdcce2df2773d9575aa3698abb148c9a2c0a22a70d4c78359253 WHIRLPOOL 9b2df609f4ad66acda4783e52207e804008feff4b6616c036ffec28ce1d32c92bed737125337e3c84c5bdaf415352d56481aa5998831e29b2fda728e5d742119
 MISC metadata.xml 260 SHA256 b988a48d8a4e40a98f84e7a463852923b7f2103584e3ca7a46a9212cb621125d SHA512 438a7ea3bc4a9abfa5da583ab08c3a9c195b384fdb6d302996971b0249826cf5edd290640e8d210081178bc48a9df796c9a7d3279599f437eab6e9ccaa32251d WHIRLPOOL e42bf3eb50d3c67373a648d1de56c66c61d6f1ab7762993bdce2adb86254a8bdf219bdad0a849468102d6f3bf6d520bb007e7c28193c52dc331d97eebf42fec6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU5aR8AAoJELp701BxlEWf2rYP/1NhqY6DK2nvY5Fio1Zn5NxI
-p1EWZCLM2t+EK8A5AMuavb45RjOQ6lRV07p9XLu9JDu3c1xiyJe9bv0ScwgYFuaC
-3lgQ+WV66AuV+L0OZNxcS0cDSa0j/Luqsc6KO1xx7TmFczCyggPtOvsG1XM2EFDp
-m/PhcqycyvQQ7qE13Dvu62gLkKf8QTLEnU8d01eA0ZlY2eAi6uC+gzA+0Fw+eVU7
-DKY4JBVSg9zXTZriPpOgtcveG6QPtdCPBTCAOOnEejzA1H/yyBdm7wskcnMS/L6Z
-7y2DpaEWmo0by0CgYWU47LZwrZGCW265IbBlks+N/eWaohzsPW8K7s6t1tLQKHH9
-OmCJpgfNfvhTI9vlu9gIQJ2gwqUqHdVEI5uP3LY9p8PCpiFM1ToRT/5VD2RtNcay
-hXMW8qUlkP3JuoydIV3qql2EME1NFJtu6I+5IC7zIQD2z6gUOJUtuyWPhL1ow5yE
-JrJaQdkv9fnBmTQxt3GXpEaDCyiaeZkpXiFaw8DeiJV2If1IT6ewAZ9ZYZcflZN8
-rnQp2LWM9OxkqaCBA4H5KcfwdnRu4EKO7nh5Rg0bRuZSp1sJgjgEg+fQK7ADfRPF
-5Dn7bl/ePCoYE6RnHwIQXeOwxXqIDiI8S3tnGjSn2ZGJe7VRKWzCq9gWNouq4KN4
-M60fywCx6VQmWTPDWSQM
-=sAL7
+iEYEAREIAAYFAlUIAC8ACgkQvFcC4BYPU0pVYACgldJufI15EN5gddu1p7Cn9l/a
+sgYAn2B5o8cr5Vz5w8Ax2pMMSr5442Ly
+=h3St
 -----END PGP SIGNATURE-----
