@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libva-vdpau-driver
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libva-vdpau-driver/ChangeLog,v 1.12 2015/02/19 08:53:15 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libva-vdpau-driver/ChangeLog,v 1.13 2015/03/17 10:21:34 aballier Exp $
+
+  17 Mar 2015; Alexis Ballier <aballier@gentoo.org>
+  -libva-vdpau-driver-0.7.3.ebuild, -libva-vdpau-driver-0.7.4.ebuild,
+  -libva-vdpau-driver-0.7.4-r1.ebuild:
+  remove old
 
   19 Feb 2015; Agostino Sarubbo <ago@gentoo.org>
   libva-vdpau-driver-0.7.4-r2.ebuild:
